cambie color y tamaño de foto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Curriculum vitae</h1>
-    <img src="foto mia.jpg" alt="">
+    <img src="foto mia.jpg" alt="foto de perfil" width="150" height="150">
      <h2>Harold</h2>
+     <link rel="stylesheet" href="style.css">
     <p>Vivo en Cancún, pero soy de Durango, Estudio Ing en Software. Me quiero ir a mi casa.</p> 
     <h3>Datos Personales</h3>
     <ul>
