Crear pagina de contacto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <img src="foto mia.jpg" alt="foto de perfil" width="150" height="150">
      <h2>Harold</h2>
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="contacto.html">
     <p>Vivo en Cancún, pero soy de Durango, Estudio Ing en Software. Me quiero ir a mi casa.</p> 
     <h3>Datos Personales</h3>
     <ul>
@@ -34,6 +35,3 @@
     </ul>
 </body>
 </html>
-liveserver
-prettier
-
