porfin logre que el boton funcionara

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
         <li><strong>Trabajador de mi casa</li>
         <li><strong>Co-Creador de Facebook</li>
         <li><strong>Dueño de Coca Cola</li>
+            <a href="contacto.html">¡Contáctame ahora!</a>
     </ul>
 </body>
 </html>
-<<<<<<< Updated upstream
-=======
 
->>>>>>> Stashed changes
