--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
     <br> Av. Rodrigo Gómez 15, 77507 Cancún, Q.R.
      <br> o dejanos un mensaje dentro del formulario, nos encantaria contactarte.
 </p>
-<div id="formContainer">
+<div id="formcontainer">
     <form action="#">
         <label for="">Nombre</label>
         <input type="text" placeholder="Escribe tu Nombre">
